--- a/index.html
+++ b/index.html
@@ -18,9 +18,22 @@
   
     <header>
       <h1>Hoenns Wildest Frontier</h1>
+      <div class="cards-flex-container">
+        <article>
+          <img class="card-image" src="images/root fossil.png" alt="pokemon fossil image">
+          <h2 class="card-title-day">Daylight Tour</h2>
+          <p class="card-text">Book a fossil tour!</p>
+        </article> 
+        <article>
+          <img class="card-image" src="images/trapinch.png" alt="pokemon trapinch image">
+          <h2 class="card-title-night">Evening Tour</h2>
+          <p class="card-text">Book a wildlife safari!</p>
+        </article>
+      </div>
+      
     </header>
   
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam nesciunt et omnis in cum reprehenderit sequi molestiae, adipisci est, quod, facilis animi facere ea? Mollitia natus modi sed asperiores reiciendis ex, provident ratione numquam sapiente iusto, cupiditate odio itaque vero nisi magnam, eos officiis nulla dolorem alias cumque? Neque accusantium, aliquid totam eum vel suscipit, dolor similique repudiandae cum ipsa reiciendis temporibus recusandae in dicta officia. Impedit quam reprehenderit veniam consectetur adipisci excepturi quaerat magnam dolorum. Iste corporis, veritatis labore excepturi eligendi, molestiae minima, necessitatibus unde magnam possimus perferendis.</p>
+    <p style="color: black;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam nesciunt et omnis in cum reprehenderit sequi molestiae, adipisci est, quod, facilis animi facere ea? Mollitia natus modi sed asperiores reiciendis ex, provident ratione numquam sapiente iusto, cupiditate odio itaque vero nisi magnam, eos officiis nulla dolorem alias cumque? Neque accusantium, aliquid totam eum vel suscipit, dolor similique repudiandae cum ipsa reiciendis temporibus recusandae in dicta officia. Impedit quam reprehenderit veniam consectetur adipisci excepturi quaerat magnam dolorum. Iste corporis, veritatis labore excepturi eligendi, molestiae minima, necessitatibus unde magnam possimus perferendis.</p>
 
   
   
