formatted css declarations, added comments, moved js file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam nesciunt et omnis in elit reprehenderit sequi molestiae, adipisci est, quod, facilis animi facere ea? Mollitia natus modi sed asperiores reiciendis ex, provident ratione numquam sapiente iusto, cupiditate odio itaque vero nisi magnam, eos officiis nulla dolorem alias cumque? Lorem ipsum dolor sit amet.</p>
     </section>
    
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     
   </body>
 
